# roboide

./: .gitignore  CMakeLists.txt  CMakeLists.win  README.md  build.sh  msys-mingw-env.cmd  toolchain-mingw64.cmake
.github/workflows/: build-windows.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h  syntaxhighlighter.cpp  syntaxhighlighter.h  test-compile.cpp
